--- a/style.css
+++ b/style.css
@@ -14,7 +14,30 @@ body {
 a {
     text-decoration: none;
 }
-
+.button.green {
+    --background: #90FF51;
+    --text: #fff;
+    --shadow: 0 2px 8px -1px rgba(0, 255, 170, 0.32);
+    --shadow-hover: 0 4px 20px -2px rgba(83, 172, 150, 0.5);
+}
+button.grey {
+    --background: #696969;
+    --text: #fff;
+    --shadow: 0 2px 8px -1px rgba(105, 105, 105, 0.32);
+    --shadow-hover: 0 4px 20px -2px rgba(105, 105, 105, 0.5);
+}
+button.red {
+    --background: #FF0000;
+    --text: #fff;
+    --shadow: 0 2px 8px -1px rgba(255, 0, 0, 0.32);
+    --shadow-hover: 0 4px 20px -2px rgba(255, 0, 0, 0.5);
+}
+button.blue {
+    --background: #00BFFF;
+    --text: #fff;
+    --shadow: 0 2px 8px -1px rgba(0, 191, 255, 0.32);
+    --shadow-hover: 0 4px 20px -2px rgba(0, 191, 255, 0.5);
+}
 .button.dark {
     --background: #2F3545;
     --shadow: 0 2px 8px -1px rgba(21, 25, 36, 0.32);
